// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty single rule 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [],
    "selector": ".banana",
  },
]
`;

exports[`media query 1`] = `
[
  {
    "$nodeType": "at",
    "body": [
      {
        "$nodeType": "rule",
        "nestedRules": [
          {
            "$nodeType": "rule",
            "nestedRules": [],
            "properties": [],
            "selector": ".banana",
          },
        ],
        "properties": [],
        "selector": "",
      },
    ],
    "parameters": "screen and (max-width: 992px)",
    "type": "media",
  },
]
`;

exports[`single rule with no property and nested rule with one property 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "text": "color: green",
          },
        ],
        "selector": ".nested",
      },
    ],
    "properties": [],
    "selector": ".banana",
  },
]
`;

exports[`single rule with one property 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: red",
      },
    ],
    "selector": ".banana",
  },
]
`;

exports[`single rule with one property and nested rule 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "text": "color: green",
          },
        ],
        "selector": ".nested",
      },
    ],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: red",
      },
    ],
    "selector": ".banana",
  },
]
`;
